--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A project for querying the Blizzard API and returning info about the requested character.",
   "main": "",
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "author": "Ryan White",
   "license": "ISC",
